# it-help-service

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
frontend/: Makefile  package-lock.json  package.json  urls.py  webpack.config.js
frontend/src/: App.js  index.js
frontend/src/components/: IndexPage.jsx  LoginPage.jsx  Navbar.jsx  SignupPage.jsx  TicketCreateForm.jsx  UsersList.jsx
frontend/src/hooks/: index.js
frontend/src/routes/: routes.js
frontend/src/slices/: index.js  usersSlice.js
frontend/templates/frontend/: index.html
it_helpdesk/: admin.py  apps.py  models.py  settings.py  urls.py
it_helpdesk/api/: router.py  serializers.py  views.py
it_helpdesk/migrations/: 0001_initial.py
it_helpdesk/tickets/: admin.py  apps.py  models.py
it_helpdesk/tickets/migrations/: 0001_initial.py  0002_alter_ticket_closed_at.py  0003_ticket_assigned_ticket_author.py  0004_alter_ticket_assigned_alter_ticket_author.py
it_helpdesk/users/: admin.py  apps.py  models.py
it_helpdesk/users/migrations/: 0001_initial.py  0002_alter_user_role.py  0003_alter_user_date_birth.py  0004_alter_user_date_birth.py
web/: Dockerfile  package-lock.json  package.json
web/src/: App.js  index.js
web/src/components/: IndexPage.jsx  LoginPage.jsx  Navbar.jsx  OwnerItTicketsList.jsx  SignupPage.jsx  TicketCreateForm.jsx  TicketModal.jsx  TicketsList.jsx  UsersList.jsx
web/src/config/: config.js
web/src/contexts/: index.jsx
web/src/routes/: routes.js
web/src/slices/: index.js  ticketsSlice.js  usersSlice.js
web/src/utils/: utils.js
(+3 files in other folders)
